# cognitive-modules

./: .coverage  .gitignore  CERTIFICATION.md  CMEP-PROCESS.md  COGNITIVE-PROTOCOL.md  COMPOSITION.md  CONFORMANCE.md  CONTEXT-PROTOCOL.md  ERROR-CODES.md  GOVERNANCE.md  IMPLEMENTERS-GUIDE.md  INTEGRATION.md  README.md  README_zh.md  REGISTRY-PROTOCOL.md  SPEC-v2.2.md  SPEC-v2.2_zh.md  SPEC-v2.5.md  SPEC-v2.5_zh.md  SPEC.md  cognitive-registry.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
cmeps/: README.md  TEMPLATE.md
cognitive/modules/api-designer/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/code-reviewer/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/code-simplifier/: module.yaml  prompt.md  schema.json
cognitive/modules/product-analyzer/: module.yaml  prompt.md  schema.json
cognitive/modules/task-prioritizer/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/ui-component-generator/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/ui-spec-generator/: module.yaml  prompt.md  schema.json
coze-plugin/: .env.example  Dockerfile  README.md  coze-plugin-config.yaml  deploy.sh  docker-compose.yaml  openapi.yaml
coze-plugin/modules/: .gitkeep
coze-plugin/modules/example-module/: MODULE.md  schema.json
docs/: index.md
docs-v2/docs/specification/: cmep-process.md  implementers-guide.md  spec-v22.md  spec-v25.md
docs/cli/: run.md
docs/getting-started/: first-module.md
docs/guide/: module-format.md  programmatic-api.md  testing.md  typescript-runtime.md
docs/integration/: ai-tools.md  mcp.md
docs/schema/: registry-v1.json  v1.json  v2.json
docs/stylesheets/: extra.css
scripts/: validate-test-vectors.py  validate-test-vectors.ts
spec/: module.yaml.schema.json  multimodal.schema.json  registry-entry.schema.json  response-envelope.schema.json  streaming-envelope.schema.json
spec/test-vectors/: README.md
spec/test-vectors/invalid/: confidence-out-of-range.json  explain-too-long.json  failure-missing-error.json  failure-with-data.json  missing-confidence.json  missing-ok.json  missing-rationale.json  success-with-error.json  wrong-risk-enum.json  wrong-type-confidence.json
spec/test-vectors/valid/: confidence-edge-cases.json  minimal.json  (+4 more)
src/cognitive/: __init__.py  cli.py  loader.py  migrate.py  registry.py  runner.py  server.py  templates.py  validator.py
templates/runtime-starter/: README.md  package.json  requirements.txt  runtime.py  validate.py
tests/: test_migrate.py  test_runner.py  test_validator.py
(+20 files in other folders)
