[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-modules"
version = "2.2.1"
description = "Structured LLM task runner with schema validation, confidence scoring, and subagent orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ziel-io"}
]
keywords = [
    "llm",
    "cognitive",
    "modules",
    "ai",
    "cli",
    "schema",
    "validation",
    "prompt",
    "agent",
    "subagent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jsonschema>=4.17.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["requests>=2.28.0"]
minimax = ["openai>=1.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.28.0"
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0"
]
mcp = [
    "mcp>=1.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "ruff>=0.1.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0"
]

[project.scripts]
cog = "cognitive.cli:app"

[project.urls]
Homepage = "https://github.com/ziel-io/cognitive-modules"
Documentation = "https://github.com/ziel-io/cognitive-modules#readme"
Repository = "https://github.com/ziel-io/cognitive-modules"
Issues = "https://github.com/ziel-io/cognitive-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/cognitive"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
